{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 0,
  "lineage": "",
  "resources": [
    {
      "module": "module.prod.module.dsc_prod_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:013969630346:internet-gateway/igw-0d436aa42565c270b",
            "id": "igw-0d436aa42565c270b",
            "owner_id": "013969630346",
            "tags": {
              "Name": "prod_vpc-igw"
            },
            "tags_all": {
              "Name": "prod_vpc-igw"
            },
            "vpc_id": "vpc-00fd4a3ed23c9860c"
          },
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.dsc_prod_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.prod.module.dsc_prod_vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:013969630346:network-acl/acl-0f9edfbf563e50e14",
            "egress": [],
            "id": "acl-0f9edfbf563e50e14",
            "ingress": [],
            "owner_id": "013969630346",
            "subnet_ids": [],
            "tags": {
              "Name": "prod_vpc-acl-private"
            },
            "tags_all": {
              "Name": "prod_vpc-acl-private"
            },
            "vpc_id": "vpc-00fd4a3ed23c9860c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.dsc_prod_vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:013969630346:network-acl/acl-0d8230e842a6d5f3c",
            "egress": [],
            "id": "acl-0d8230e842a6d5f3c",
            "ingress": [],
            "owner_id": "013969630346",
            "subnet_ids": [],
            "tags": {
              "Name": "prod_vpc-acl-public"
            },
            "tags_all": {
              "Name": "prod_vpc-acl-public"
            },
            "vpc_id": "vpc-00fd4a3ed23c9860c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.dsc_prod_vpc",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0873f41a8a7e26077",
            "network_acl_id": "acl-0f9edfbf563e50e14",
            "subnet_id": "subnet-05383b97cc3d5989e"
          },
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_network_acl.private",
            "module.prod.module.dsc_prod_vpc.aws_subnet.private",
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc",
            "module.prod.module.dsc_prod_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-06fb55e95cb925448",
            "network_acl_id": "acl-0f9edfbf563e50e14",
            "subnet_id": "subnet-0c4be3c8c0aa443ce"
          },
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_network_acl.private",
            "module.prod.module.dsc_prod_vpc.aws_subnet.private",
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc",
            "module.prod.module.dsc_prod_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0b5cd0ec572fbca58",
            "network_acl_id": "acl-0f9edfbf563e50e14",
            "subnet_id": "subnet-0ae45e081075d79a9"
          },
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_network_acl.private",
            "module.prod.module.dsc_prod_vpc.aws_subnet.private",
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc",
            "module.prod.module.dsc_prod_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.dsc_prod_vpc",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0d5976a66d5d0c9b1",
            "network_acl_id": "acl-0d8230e842a6d5f3c",
            "subnet_id": "subnet-0d2f113264a88c943"
          },
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_network_acl.public",
            "module.prod.module.dsc_prod_vpc.aws_subnet.public",
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc",
            "module.prod.module.dsc_prod_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-095944f5d2f5c671a",
            "network_acl_id": "acl-0d8230e842a6d5f3c",
            "subnet_id": "subnet-024d0052a112de4e6"
          },
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_network_acl.public",
            "module.prod.module.dsc_prod_vpc.aws_subnet.public",
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc",
            "module.prod.module.dsc_prod_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-042a3f2ab557bc729",
            "network_acl_id": "acl-0d8230e842a6d5f3c",
            "subnet_id": "subnet-00a4ae637188b90e6"
          },
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_network_acl.public",
            "module.prod.module.dsc_prod_vpc.aws_subnet.public",
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc",
            "module.prod.module.dsc_prod_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.dsc_prod_vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound_allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-284742175",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f9edfbf563e50e14",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_network_acl.private",
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.dsc_prod_vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound_allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-583386405",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f9edfbf563e50e14",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_network_acl.private",
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.dsc_prod_vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound_allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3118520853",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d8230e842a6d5f3c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_network_acl.public",
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.dsc_prod_vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound_allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": null,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2254675145",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d8230e842a6d5f3c",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_network_acl.public",
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.dsc_prod_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "igw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d436aa42565c270b",
            "id": "r-rtb-0695b0d93975f61ee1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0695b0d93975f61ee",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_internet_gateway.igw",
            "module.prod.module.dsc_prod_vpc.aws_route_table.public",
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d436aa42565c270b",
            "id": "r-rtb-09c21fef1f877f2dc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09c21fef1f877f2dc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_internet_gateway.igw",
            "module.prod.module.dsc_prod_vpc.aws_route_table.public",
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d436aa42565c270b",
            "id": "r-rtb-0b74ee1f5c4e569551080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b74ee1f5c4e56955",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_internet_gateway.igw",
            "module.prod.module.dsc_prod_vpc.aws_route_table.public",
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.dsc_prod_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.prod.module.dsc_prod_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:013969630346:route-table/rtb-0daa11b8f9a4fab8d",
            "id": "rtb-0daa11b8f9a4fab8d",
            "owner_id": "013969630346",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod_vpc-rt-private-1"
            },
            "tags_all": {
              "Name": "prod_vpc-rt-private-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-00fd4a3ed23c9860c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:013969630346:route-table/rtb-023c2c9a7d07540c4",
            "id": "rtb-023c2c9a7d07540c4",
            "owner_id": "013969630346",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod_vpc-rt-private-2"
            },
            "tags_all": {
              "Name": "prod_vpc-rt-private-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-00fd4a3ed23c9860c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:013969630346:route-table/rtb-00a1df7c5c6feb8d1",
            "id": "rtb-00a1df7c5c6feb8d1",
            "owner_id": "013969630346",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod_vpc-rt-private-3"
            },
            "tags_all": {
              "Name": "prod_vpc-rt-private-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-00fd4a3ed23c9860c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.dsc_prod_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:013969630346:route-table/rtb-0695b0d93975f61ee",
            "id": "rtb-0695b0d93975f61ee",
            "owner_id": "013969630346",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod_vpc-rt-public-1"
            },
            "tags_all": {
              "Name": "prod_vpc-rt-public-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-00fd4a3ed23c9860c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:013969630346:route-table/rtb-09c21fef1f877f2dc",
            "id": "rtb-09c21fef1f877f2dc",
            "owner_id": "013969630346",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod_vpc-rt-public-2"
            },
            "tags_all": {
              "Name": "prod_vpc-rt-public-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-00fd4a3ed23c9860c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:013969630346:route-table/rtb-0b74ee1f5c4e56955",
            "id": "rtb-0b74ee1f5c4e56955",
            "owner_id": "013969630346",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod_vpc-rt-public-3"
            },
            "tags_all": {
              "Name": "prod_vpc-rt-public-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-00fd4a3ed23c9860c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.dsc_prod_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae64ed4e6a18b094",
            "route_table_id": "rtb-0daa11b8f9a4fab8d",
            "subnet_id": "subnet-05383b97cc3d5989e"
          },
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_route_table.private",
            "module.prod.module.dsc_prod_vpc.aws_subnet.private",
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc",
            "module.prod.module.dsc_prod_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2c85cf99f59f7dc",
            "route_table_id": "rtb-023c2c9a7d07540c4",
            "subnet_id": "subnet-0c4be3c8c0aa443ce"
          },
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_route_table.private",
            "module.prod.module.dsc_prod_vpc.aws_subnet.private",
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc",
            "module.prod.module.dsc_prod_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f30b496174fc794a",
            "route_table_id": "rtb-00a1df7c5c6feb8d1",
            "subnet_id": "subnet-0ae45e081075d79a9"
          },
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_route_table.private",
            "module.prod.module.dsc_prod_vpc.aws_subnet.private",
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc",
            "module.prod.module.dsc_prod_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.dsc_prod_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d8085d7c194b8e0",
            "route_table_id": "rtb-0695b0d93975f61ee",
            "subnet_id": "subnet-0d2f113264a88c943"
          },
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_route_table.public",
            "module.prod.module.dsc_prod_vpc.aws_subnet.public",
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc",
            "module.prod.module.dsc_prod_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ffdcf14b7e3a1bf",
            "route_table_id": "rtb-09c21fef1f877f2dc",
            "subnet_id": "subnet-024d0052a112de4e6"
          },
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_route_table.public",
            "module.prod.module.dsc_prod_vpc.aws_subnet.public",
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc",
            "module.prod.module.dsc_prod_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3b346db57648dcf",
            "route_table_id": "rtb-0b74ee1f5c4e56955",
            "subnet_id": "subnet-00a4ae637188b90e6"
          },
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_route_table.public",
            "module.prod.module.dsc_prod_vpc.aws_subnet.public",
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc",
            "module.prod.module.dsc_prod_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.dsc_prod_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:013969630346:subnet/subnet-05383b97cc3d5989e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05383b97cc3d5989e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "013969630346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod_vpc-subnet-private-1",
              "VpcName": "prod_vpc"
            },
            "tags_all": {
              "Name": "prod_vpc-subnet-private-1",
              "VpcName": "prod_vpc"
            },
            "vpc_id": "vpc-00fd4a3ed23c9860c"
          },
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc",
            "module.prod.module.dsc_prod_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:013969630346:subnet/subnet-0c4be3c8c0aa443ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.4.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4be3c8c0aa443ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "013969630346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod_vpc-subnet-private-2",
              "VpcName": "prod_vpc"
            },
            "tags_all": {
              "Name": "prod_vpc-subnet-private-2",
              "VpcName": "prod_vpc"
            },
            "vpc_id": "vpc-00fd4a3ed23c9860c"
          },
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc",
            "module.prod.module.dsc_prod_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:013969630346:subnet/subnet-0ae45e081075d79a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.8.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae45e081075d79a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "013969630346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod_vpc-subnet-private-3",
              "VpcName": "prod_vpc"
            },
            "tags_all": {
              "Name": "prod_vpc-subnet-private-3",
              "VpcName": "prod_vpc"
            },
            "vpc_id": "vpc-00fd4a3ed23c9860c"
          },
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc",
            "module.prod.module.dsc_prod_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.dsc_prod_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:013969630346:subnet/subnet-0d2f113264a88c943",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.64.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2f113264a88c943",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "013969630346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod_vpc-subnet-public-1",
              "VpcName": "prod_vpc"
            },
            "tags_all": {
              "Name": "prod_vpc-subnet-public-1",
              "VpcName": "prod_vpc"
            },
            "vpc_id": "vpc-00fd4a3ed23c9860c"
          },
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc",
            "module.prod.module.dsc_prod_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:013969630346:subnet/subnet-024d0052a112de4e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.68.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024d0052a112de4e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "013969630346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod_vpc-subnet-public-2",
              "VpcName": "prod_vpc"
            },
            "tags_all": {
              "Name": "prod_vpc-subnet-public-2",
              "VpcName": "prod_vpc"
            },
            "vpc_id": "vpc-00fd4a3ed23c9860c"
          },
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc",
            "module.prod.module.dsc_prod_vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:013969630346:subnet/subnet-00a4ae637188b90e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.72.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a4ae637188b90e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "013969630346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod_vpc-subnet-public-3",
              "VpcName": "prod_vpc"
            },
            "tags_all": {
              "Name": "prod_vpc-subnet-public-3",
              "VpcName": "prod_vpc"
            },
            "vpc_id": "vpc-00fd4a3ed23c9860c"
          },
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc",
            "module.prod.module.dsc_prod_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.dsc_prod_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:013969630346:vpc/vpc-00fd4a3ed23c9860c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b584a2ed9be4060a",
            "default_route_table_id": "rtb-04582b02ce66b5731",
            "default_security_group_id": "sg-0035bffea3b571528",
            "dhcp_options_id": "dopt-0133ee389139ff96b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00fd4a3ed23c9860c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04582b02ce66b5731",
            "owner_id": "013969630346",
            "tags": {
              "Name": "prod_vpc"
            },
            "tags_all": {
              "Name": "prod_vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:013969630346:security-group/sg-08aec7a75322f4756",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-08aec7a75322f4756",
            "ingress": [],
            "name": "prod-eks-cluster-cluster-20230606110009105600000008",
            "name_prefix": "prod-eks-cluster-cluster-",
            "owner_id": "013969630346",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-eks-cluster-cluster"
            },
            "tags_all": {
              "Name": "prod-eks-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-00fd4a3ed23c9860c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:013969630346:security-group/sg-0a376beffab81fc35",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0a376beffab81fc35",
            "ingress": [],
            "name": "prod-eks-cluster-node-20230606110009105200000007",
            "name_prefix": "prod-eks-cluster-node-",
            "owner_id": "013969630346",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-eks-cluster-node",
              "kubernetes.io/cluster/prod-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "prod-eks-cluster-node",
              "kubernetes.io/cluster/prod-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-00fd4a3ed23c9860c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.prod.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-599154687",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08aec7a75322f4756",
            "security_group_rule_id": "sgr-0a9f45991ab4f0cbf",
            "self": false,
            "source_security_group_id": "sg-0a376beffab81fc35",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc",
            "module.prod.module.eks.aws_security_group.cluster",
            "module.prod.module.eks.aws_security_group.node"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3171201617",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a376beffab81fc35",
            "security_group_rule_id": "sgr-022587f69c3003748",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc",
            "module.prod.module.eks.aws_security_group.cluster",
            "module.prod.module.eks.aws_security_group.node"
          ]
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1357773375",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a376beffab81fc35",
            "security_group_rule_id": "sgr-0cfa598e4e1421607",
            "self": false,
            "source_security_group_id": "sg-08aec7a75322f4756",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc",
            "module.prod.module.eks.aws_security_group.cluster",
            "module.prod.module.eks.aws_security_group.node"
          ]
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2501281340",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a376beffab81fc35",
            "security_group_rule_id": "sgr-0cd95384419803d1a",
            "self": false,
            "source_security_group_id": "sg-08aec7a75322f4756",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc",
            "module.prod.module.eks.aws_security_group.cluster",
            "module.prod.module.eks.aws_security_group.node"
          ]
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1549066666",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a376beffab81fc35",
            "security_group_rule_id": "sgr-0b996a3a60534e8df",
            "self": false,
            "source_security_group_id": "sg-08aec7a75322f4756",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc",
            "module.prod.module.eks.aws_security_group.cluster",
            "module.prod.module.eks.aws_security_group.node"
          ]
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1325981067",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a376beffab81fc35",
            "security_group_rule_id": "sgr-06c9a7294f0d66c58",
            "self": false,
            "source_security_group_id": "sg-08aec7a75322f4756",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc",
            "module.prod.module.eks.aws_security_group.cluster",
            "module.prod.module.eks.aws_security_group.node"
          ]
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-732556864",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a376beffab81fc35",
            "security_group_rule_id": "sgr-0b62b8ed9def5e944",
            "self": false,
            "source_security_group_id": "sg-08aec7a75322f4756",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc",
            "module.prod.module.eks.aws_security_group.cluster",
            "module.prod.module.eks.aws_security_group.node"
          ]
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1559165597",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a376beffab81fc35",
            "security_group_rule_id": "sgr-05dc6169a2c6fe9f0",
            "self": false,
            "source_security_group_id": "sg-08aec7a75322f4756",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc",
            "module.prod.module.eks.aws_security_group.cluster",
            "module.prod.module.eks.aws_security_group.node"
          ]
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1067020870",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a376beffab81fc35",
            "security_group_rule_id": "sgr-0cddde6fc46c08fc7",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc",
            "module.prod.module.eks.aws_security_group.cluster",
            "module.prod.module.eks.aws_security_group.node"
          ]
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3170815130",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a376beffab81fc35",
            "security_group_rule_id": "sgr-061480549bacfe159",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc",
            "module.prod.module.eks.aws_security_group.cluster",
            "module.prod.module.eks.aws_security_group.node"
          ]
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-413233013",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0a376beffab81fc35",
            "security_group_rule_id": "sgr-044066da74801dbfb",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.dsc_prod_vpc.aws_vpc.vpc",
            "module.prod.module.eks.aws_security_group.cluster",
            "module.prod.module.eks.aws_security_group.node"
          ]
        }
      ]
    }
  ]
}